Fixing width breakpoints, header alignment, background colours

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -21,7 +21,11 @@
     --thickness: 2px;
 
     /* Layout */
-    --page-width: 1200px;
+    --page-width: 100%;
+
+	/* Scrollbars */
+	scrollbar-width: auto;
+	scrollbar-color: var(--color-darker-text-faded) var(--color-background);
 }
 
 .page-width {
@@ -71,18 +75,30 @@ html {
 
 body {
   display: flex;
-  height: 100vh;
+  height: 100%;
   margin: 0 auto;
   padding: 1rem;
   line-height: 1.5;
   flex-direction: column;
-  background: var(--color-background-gradient);
+  background: var(--color-background-gradient), var(--color-background);
   background-repeat: no-repeat;
   background-attachment: fixed;
 }
 
 header {
     margin-bottom: 2rem;
+}
+
+.header-top {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+.hamburger-x {
+	padding-top: .2rem;
+}
+.hamburger-icons {
+	padding-top: 1.6rem;
 }
 
 main {
@@ -189,6 +205,11 @@ code {
 
 .expanded {
   display: unset;
+}
+nav:has(.nav-links.expanded) {
+	margin-top: 1rem;
+	border-top: 2px solid var(--color-darker-text-faded);
+	border-bottom: 2px solid var(--color-darker-text-faded);
 }
 
 ul:has(.tag) {
@@ -378,11 +399,18 @@ iframe[title="YouTube video player"]{
     height: auto;
   }
 }
-
+@media screen and (min-width: 1200px) {
+	:root {
+		--page-width: 1200px !important;
+	}
+	header,
+	main,
+	footer {
+		width: var(--page-width);
+		margin: 0 auto;
+	}
+}
 @media screen and (min-width: 636px) {
-    body {
-        width: var(--page-width);
-    }
     .nav-links {
         display: block;
         position: static;
